[package]
name = "rs-dev-sheets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
typeshare = "1.0.0"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
actix = "0.13.3"
log = "0.4.20"
env_logger = "0.11.1"
dotenvy = "0.15.7"
actix-web = "4.5.1"
actix-session = "0.9.0"
