[package]
name = "rs-dev-sheets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
typeshare = "1.0.0"
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
actix = "0.13.3"
log = "0.4.20"
env_logger = "0.11.1"
dotenvy = "0.15.7"
actix-web = "4.5.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-identity = "0.7.0"
base64 = "0.21.7"
derive_more = "0.99.17"
once_cell = "1.19.0"
pwhash = "1.0.0"
chrono = { version = "0.4.34", features = ["serde"] }
serde_json = "1.0.113"
